client/src/components/messages/message/message.module.css
.container {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.alignCenter {
  align-items: center;
}

.alignLeft {
  align-items: flex-start;
}

.alignRight {
  align-items: end;
}

.welcome-message {
  width: 100%;
  display: flex;
  justify-content: center;
  margin: 8px 0px;
}
.welcome-message p {
  font-size: 1rem;
}

.message {
  max-width: 60%;
  margin-bottom: 4px;
  padding: 4px 4px;
}

.message-background {
  background-color: rgb(207, 215, 221);
  border-radius: 5px;
}

.message-align-right {
  text-align: right;
}

.message_align_center {
  text-align: center;
}

.user {
  font-size: 0.8rem;
  padding: 0px 4px;
}

.text {
  display: flex;
  align-items: center;
  line-height: 1.5;
  font-size: 0.9rem;
}

.not-display {
  display: none;
}

